fixed name overflow ellipsis

--- a/css/main.css
+++ b/css/main.css
@@ -185,7 +185,6 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  overflow: hidden;
 }
 
 .hud-controls {
@@ -421,6 +420,7 @@ body {
   flex-direction: row;
   background-color: #303030;
   padding: 0.0625rem 0;
+  justify-content: flex-start;
 }
 .portfLayer .portfLayer-left__toggleicons {
   padding-left: 0.75rem;
@@ -445,9 +445,9 @@ body {
 }
 .portfLayer .portfLayer-left__layer-button {
   display: flex;
-  flex-basis: 50%;
   cursor: pointer;
-  width: 100%;
+  min-width: 0;
+  flex: 1 1 auto;
 }
 .portfLayer .portfLayer-left__lable {
   padding: 0;
@@ -551,6 +551,7 @@ body {
   display: flex;
   max-height: 0vh;
   transition: max-height 0.5s ease-in;
+  overflow: hidden;
 }
 .portfLayer .expand__left {
   font-family: "adobecleanux_regular";
@@ -613,15 +614,17 @@ body {
   position: relative;
 }
 .portfLayer .expand__right a span {
-  background: rgba(255, 255, 255, 0.5);
   position: absolute;
   transition: 0.3s ease-in-out;
+  width: 30%;
+  fill: white;
+  opacity: 0.7;
 }
 .portfLayer .expand__right a img {
   padding: 0 0.625rem;
 }
 .portfLayer .expand__right a:hover > span {
-  background: white;
+  opacity: 1;
   transition: 0.3s ease-in-out;
 }
 
